core/test/org.eclipse.vjet.test.core.jstojava/testFiles/org/eclipse/vjet/dsf/jst/validation/vjo/BugFixes/bad/Bug46683.js
vjo.ctype('org.eclipse.vjet.dsf.jst.validation.vjo.BugFixes.bad.Bug46683') //< public
.endType();